--- a/churyong.html
+++ b/churyong.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>맹!호!</h1>
-    <p>일병 이승훈ㅎㅎ 힘내랑!! 내가 곧 간드아앙ㅇ<br>
+    <p>이병 이승훈ㅎㅎ 힘내랑!! 내가 곧 간드아앙ㅇ<br>
     <strong>츄롱이<u>메에엥에롱</u> </strong>
     <br>힘들었지ㅜㅜ 그래두 화장실에서 응아 안해두 된다!ㅎㅎ</p>
     <img src="c.jpg " width="50%">
